--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,18 @@
 <resources>
     <string name="app_name">KK\'s Pet Sitting Client App</string>
     <string name="action_settings">Settings</string>
-    <string name="history">Established in 2005, KK\'s Pet Sitting has been one of the most trusted and respected pet care services in the Northern Chicago area. For 11 years, we have strived to be your pets\' second family.  Thank you for trusting us with your beloved animals.</string>
+    <string name="history">Established in 2005, KK\'s Pet Sitting has been one of the most trusted and respected pet care services in the Northern Chicago area. Thank you for trusting us with your beloved animals.</string>
     <string name="news">Yelp! reviews</string>
     <string name="website">Website</string>
     <string name="title_activity_reviews">ReviewsActivity</string>
     <string name="share">share</string>
     <string name="title_activity_website">WebsiteActivity</string>
-
+    <string name="submit">submit</string>
+    <string name="skip">skip login</string>
+    <string name="main">main</string>
+    <string name="schedule_it">schedule it!</string>
+    <string name="schedule">Schedule your pet care here (or send an email)</string>
+    <string name="service">See if you are in the service area</string>
+    <string name="title_activity_schedule">ScheduleActivity</string>
 </resources>
 
