--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,14 +10,15 @@
     <string name="submit">submit</string>
     <string name="skip">skip login</string>
     <string name="main">main</string>
-    <string name="schedule_it">schedule it!</string>
-    <string name="schedule">Schedule your pet care here \n (or by email)</string>
-    <string name="service">Enter your zip code to see if you are in the service area:</string>
+    <string name="schedule">Schedule your pet care here</string>
+    <string name="note">(or by email)</string>
+    <string name="sched">Note: Please allow this page a moment to load if you are on a slow connection</string>
+    <string name="service">Check here if you are in the service area:</string>
     <string name="title_activity_schedule">ScheduleActivity</string>
     <string name="title_activity_service_area">ServiceAreaActivity</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="login">Existing clients, please log in to schedule pet care or change information</string>
-    <string name="resultHint">Your result will appear here</string>
+    <string name="login">Existing clients, please log in to schedule pet care</string>
+    <string name="resultHint">Please enter your zip code and click the submit button</string>
     <string name="others">All others, please continue without login to check if you are in our service area. For additional information on pricing and policies, please visit our website.</string>
     <string name="result_positive">Yes! You are located within our service area!  Please go to our website to fill out our contact form and we will contact you soon! You may also download forms we will need when you start service with us.</string>
     <string name="result_negative">We\'re sorry, but we are not able to accommodate service in your area at this time.</string>
