--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">KK\'s Pet Sitting Client App</string>
+    <string name="cl_login">Schedule Pet Care</string>
     <string name="action_settings">Settings</string>
     <string name="history">Established in 2005, KK\'s Pet Sitting has been one of the most trusted and respected pet care services in the Northern Chicago area. Thank you for trusting us with your beloved animals.</string>
     <string name="news">Yelp! reviews</string>
@@ -8,48 +9,71 @@
     <string name="share">share</string>
     <string name="title_activity_website">WebsiteActivity</string>
     <string name="submit">submit</string>
-    <string name="skip">skip login</string>
+    <string name="skip">continue</string>
     <string name="main">main</string>
     <string name="schedule">Schedule your pet care here</string>
     <string name="note">(or by email)</string>
     <string name="sched">Note: Please allow this page a moment to load if you are on a slow connection</string>
-    <string name="service">Check here if you are in the service area:</string>
+    <string name="service">Check here if you are in the KK\'s Pet Sitting service area.  For details, check our website.</string>
     <string name="title_activity_schedule">ScheduleActivity</string>
     <string name="title_activity_service_area">ServiceAreaActivity</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="login">Existing clients, please log in to schedule pet care</string>
+    <string name="login">Existing clients, please sign in to schedule pet care</string>
     <string name="resultHint">Please enter your zip code and click the submit button</string>
     <string name="others">All others, please continue without login to check if you are in our service area. For additional information on pricing and policies, please visit our website.</string>
     <string name="result_positive">Yes! You are located within our service area!  Please go to our website to fill out our contact form and we will contact you soon! You may also download forms we will need when you start service with us.</string>
     <string name="result_negative">We\'re sorry, but we are not able to accommodate service in your area at this time.</string>
+    <string name="home">home</string>
+    <string name="hint_user_id">User ID</string>
+    <string name="get_custom_token">Get Token</string>
+    <string name="sign_in">Sign In</string>
+    <string name="create_account">Create Account</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="disconnect">Disconnect</string>
+    <string name="loading">Loading…</string>
+    <string name="custom_token">Custom Token</string>
+    <string name="token_null">Token: null</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="auth_failed">Authentication failed</string>
+    <string name="emailpassword_status_fmt">Email User: %s</string>
+    <string name="emailpassword_title_text"></string>
+    <string name="id_fmt">User ID: %s</string>
+    <string name="email_fmt">Email: %s</string>
 
+    <!-- Sign-in status messages -->
+    <string name="signed_in_fmt">Signed in as: %s</string>
+    <string name="signed_in">Signed in</string>
+    <string name="signing_in">Signing in…</string>
+    <string name="signed_out">Signed out</string>
+    <string name="signed_in_err">"Error: please check logs."</string>
+    <string name="error_null_person">
+    Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
+    enabled for your project, you have a properly configured google-services.json file
+    and that your device has an internet connection.
+    </string>
 
+    <string name="auth_code_fmt">Auth Code: %s</string>
+    <string name="id_token_fmt">ID Token: %s</string>
 
-        <string name="label_emailpassword">Email/Password Authentication</string>
-        <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
+    <!-- Google Play Services error for Toast -->
+    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
 
+    <!-- Content Description for images -->
+    <string name="desc_google_icon">Google Logo</string>
 
-        <string name="hint_user_id">User ID</string>
-        <string name="get_custom_token">Get Token</string>
-        <string name="sign_in">Sign In</string>
-        <string name="create_account">Create Account</string>
-        <string name="sign_out">Sign Out</string>
-        <string name="disconnect">Disconnect</string>
-        <string name="loading">Loading…</string>
-        <string name="custom_token">Custom Token</string>
-        <string name="signed_out">Signed Out</string>
-        <string name="token_null">Token: null</string>
-        <string name="hint_email">Email</string>
-        <string name="hint_password">Password</string>
-        <string name="desc_firebase_lockup">Firebase logo and name</string>
-        <string name="auth_failed">Authentication failed</string>
+    <!-- Rationale for asking for Contacts -->
+    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
 
-        <string name="emailpassword_status_fmt">Email User: %s</string>
-        <string name="emailpassword_title_text"></string>
+    <!-- Activity Names and Descriptions -->
+    <string name="name_sign_in_activity">SignInActivity</string>
+    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
+    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
+    <string name="name_id_token_activity">IdTokenActivity</string>
+    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
+    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
+    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
 
-        <string name="id_fmt">User ID: %s</string>
-        <string name="email_fmt">Email: %s</string>
-
-
+    <string name="server_client_id">AIzaSyBjoceaT38BTr5saWhrjA6e60smiw5wXNQ</string>
 </resources>
 
