--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">KK\'s Pet Sitting Client App</string>
+    <string name="app_name">KK\'s Pet Sitting Chicago Client App</string>
     <string name="cl_login">Schedule Pet Care</string>
     <string name="action_settings">Settings</string>
     <string name="history">Established in 2005, KK\'s Pet Sitting has been one of the most trusted and respected pet care services in the Northern Chicago area. Thank you for trusting us with your beloved animals.</string>
